<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="1"
        android:layout_marginBottom="25px"
        android:src="@drawable/banner_birat_campuus"
        android:adjustViewBounds="true"
        ></ImageView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16pt"
                android:textStyle="bold|italic"
                android:text="@string/welcome_text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28pt"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#932029"
                android:text="@string/organizationName"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:textSize="14pt"
                android:text="@string/organizationDescription"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16pt"
                android:layout_margin="15px"
                android:background="#ccc"
                android:text="@string/facility_text"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/facilitiesimage"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>