<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/banner_birat_campuus"
            android:adjustViewBounds="true"
            android:contentDescription="Birat college"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="Academic Areas"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/academicareas_desc"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="8pt"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="Key Priorities Areas"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keypriority_desc"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="8pt"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="Why choose Chriso International"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whychoose_desc"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="8pt"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="Contact for information about:"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_detail"/>

    </LinearLayout>
</ScrollView>